unpackaged/main/default/objects/icAgentConsole__incPresenceStatusMapping__c/icAgentConsole__incPresenceStatusMapping__c.object-meta.xml
<CustomObject>
    <label>OmniChannel Presence Mapping</label>
    <nameField>
        <label>Presence Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OmniChannel Presence Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>