unpackaged/main/default/objects/icAgentConsole__incPresenceStatusMapping__c/fields/icAgentConsole__incAgentSettings__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__incAgentSettings__c</fullName>
    <label>Agent Settings</label>
    <referenceTo>icAgentConsole__incAgentConfiguration__c</referenceTo>
    <relationshipLabel>OmniChannel Presence Mappings</relationshipLabel>
    <relationshipName>OmniChannel_Presence_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>