unpackaged/main/default/objects/icAgentConsole__incPresenceStatusMapping__c/fields/icAgentConsole__inContactStatus__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__inContactStatus__c</fullName>
    <defaultValue>&quot;STRING&quot;</defaultValue>
    <description>inContact Status of Omni Channel Presence Mapping</description>
    <label>inContactStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>