unpackaged/main/default/objects/icAgentConsole__incPresenceStatusMapping__c/fields/icAgentConsole__salesforceStatus__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__salesforceStatus__c</fullName>
    <defaultValue>&quot;STRING&quot;</defaultValue>
    <description>Salesforce Status of Omni Channel Presence Mapping</description>
    <label>salesforceStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>